# PyMax

./: .buildinfo  .buildinfo.bak  .gitignore  404.html  MANIFEST.in  README.md  clients.html  decorators.html  example.py  examples.html  genindex.html  guides.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readme.md  release_notes.html  release_notes_archive.html  search.html  searchindex.js  sitemap.xml  types.html
.github/workflows/: tests.yml
_modules/: index.html
_modules/pymax/: core.html  types.html
_modules/pymax/mixins/: handler.html
_modules/pymax/static/: enum.html
_sources/: clients.rst.txt  examples.rst.txt  guides.rst.txt  index.rst.txt  quickstart.rst.txt  release_notes.rst.txt  release_notes_archive.rst.txt  types.rst.txt
_static/: documentation_options.js
api/: index.html
client/: index.html
docs/: api.md  client.md  examples.md  index.md  methods.md  types.md
examples/: example.py  flt_test.py  index.html  reg.py  telegram_bridge.py  test.py
mapi/: __init__.py  chats.py  crud.py  enum.py  main.py  static.py  types.py
methods/: index.html
redocs/source/: conf.py  examples.rst  index.rst  quickstart.rst
scripts/: build.py
search/: search_index.json
src/pymax/: __init__.py  core.py  crud.py  exceptions.py  files.py  formatter.py  formatting.py  interfaces.py  mixins.py  models.py  payloads.py  protocols.py  static.py  types.py  utils.py
src/pymax/mixins/: __init__.py  auth.py  channel.py  group.py  handler.py  message.py  scheduler.py  self.py  user.py  (+2 more)
types/: index.html
(+3 files in other folders)
